# keep

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  app.py  app.py.backup  copper_brain_v2.py  features.py  model_utils.py  pyproject.toml  requirements.txt  test_download_functionality.py  threshold_tuning.py
examples/: openbb_provider_demo.ipynb  openbb_provider_example.py
src/options_surface_edge_engine/: __init__.py  cli.py  pipeline.py
src/options_surface_edge_engine/agent/: chat_agent.py
src/options_surface_edge_engine/app/: streamlit_app.py
src/options_surface_edge_engine/autopilot/: scheduler.py
src/options_surface_edge_engine/data_providers/: base.py  openbb_provider.py  yfinance_provider.py
src/options_surface_edge_engine/features/: surface_features.py
src/options_surface_edge_engine/learning/: journal.py  tuner.py
src/options_surface_edge_engine/pricing/: black_scholes.py  scenario_engine.py
src/options_surface_edge_engine/ranking/: edge_score.py  selection.py
src/options_surface_edge_engine/storage/: run_store.py
src/options_surface_edge_engine/strategies/: generators.py  templates.py
src/options_surface_edge_engine/utils/: config.py  logging.py
tests/: test_autopilot.py  test_black_scholes.py  test_chat_agent.py  test_data_quality.py  test_edge_score.py  test_generators.py  test_integration_smoke.py  test_learning.py  test_run_store.py  test_scenario_engine.py  test_selection.py  test_surface_features.py
