[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "options-surface-edge-engine"
version = "0.2.0"
description = "Options surface scanner with strategy generation, scenario simulation, and ranking."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "OpenBB User + Codex" }]
dependencies = [
  "pandas>=2.1,<3.0",
  "yfinance>=0.2.58",
  "pyarrow>=16.0.0",
  "apscheduler>=3.10.4",
  "openai>=1.50.0",
]

[project.optional-dependencies]
streamlit = ["streamlit>=1.42.0"]
openbb = ["openbb>=4.6.0"]
polygon = ["openbb-polygon>=1.4.0"]
dev = [
  "pytest>=8.2.0",
  "pytest-cov>=5.0.0",
  "mypy>=1.10.0",
  "ruff>=0.5.0",
]

[project.scripts]
osee-scan = "options_surface_edge_engine.cli:main_scan"
osee-dashboard = "options_surface_edge_engine.cli:main_dashboard"
osee-autopilot = "options_surface_edge_engine.cli:main_autopilot"
osee-runs = "options_surface_edge_engine.cli:main_runs"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
  "integration: live integration tests against online providers",
]
